[Intro Control] Hide the intro depending on resource loading; [Intro Waiting] Added animation when loading resources; [Change Project Preview] Replace all videos with GIFs; [Lazy Loading] Added the loading=lazy value for all img tags; [Mascot Control] Hide on very small devices; [Improve Switch] Redefined the default border for buttons (made consistent); [Remove Nesting] Removed div on top of image in step icon, card back and footer logo; [Fix Cards Firefox] Changed the animation of swap the card from display to z-index; [Add Label] Added highlighting to the main item in the Froly project; [Improve Links] Added styling for different states; [Improve Loading Script] Added the defer option to the script.

--- a/main.css
+++ b/main.css
@@ -5,10 +5,11 @@
   --color-light-2: #e5e5e5;
   --color-highlight: #f7b32b;
   --layer-under: -1;
-  --layer-basic: 0;
-  --layer-middle: 1;
-  --layer-upper: 2;
-  --layer-top: 3;
+  --layer-base: 0;
+  --layer-higher: 1;
+  --layer-middle: 2;
+  --layer-upper: 3;
+  --layer-top: 4;
   --card-scale: 1.5;
   --card-indent: calc(12px / var(--card-scale));
   --color-status-run-bg: #dceafc;
@@ -30,8 +31,7 @@ span {
 mark {
   background: none;
 }
-mark,
-a {
+mark {
   color: var(--color-highlight);
 }
 
@@ -42,14 +42,59 @@ html {
   color: var(--color-light-1);
 }
 
-@keyframes enableScroll {
-	from { overflow: hidden; }
-	to { overflow: auto; }
-}
-
 body {
   margin: 0;
-	animation: enableScroll 4s step-end forwards;
+	overflow: hidden;
+}
+body.scrollable {
+  overflow: auto;
+}
+
+#intro,
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+#intro {
+  justify-content: center;
+  z-index: var(--layer-top)
+}
+.intro_left-side,
+.intro_right-side {
+  position: absolute;
+  max-height: 100%;
+  overflow: visible;
+}
+.intro_left-side {
+  clip-path: polygon(-100% -100%, 101% -100%, 0 200%, -100% 200%);
+}
+.intro_right-side {
+  clip-path: polygon(100% -100%, 200% -100%, 200% 200%, -1% 200%);
+}
+.intro_left-side > *,
+.intro_right-side > * {
+  stroke: var(--color-light-1);
+  stroke-width: 3px;
+}
+.intro_right-side > polygon,
+.intro_left-side > polygon {
+  fill: var(--color-dark-1);
+  stroke: none;
+}
+
+@keyframes fadeInAndOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+#intro.wait circle {
+  animation: fadeInAndOut 2s 4s infinite alternate;
 }
 
 @keyframes setFromTopToUnder {
@@ -65,44 +110,14 @@ body {
   to { transform: translate(100vw); }
 }
 
-.intro,
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
+#intro.hide {
+  animation: setFromTopToUnder 0.1s 0.7s forwards;
 }
-
-.intro {
-  justify-content: center;
-  animation: setFromTopToUnder 5s step-end forwards;
+#intro.hide .intro_left-side {
+  animation: moveLeft 2s forwards;
 }
-.intro_left-side,
-.intro_right-side {
-  position: absolute;
-  max-height: 100%;
-  overflow: visible;
-}
-.intro_left-side {
-  clip-path: polygon(-100% -100%, 101% -100%, 0 200%, -100% 200%);
-  animation: moveLeft 2s 4s forwards;
-}
-.intro_right-side {
-  clip-path: polygon(100% -100%, 200% -100%, 200% 200%, -1% 200%);
-  animation: moveRight 2s 4s forwards;
-}
-.intro_left-side > *,
-.intro_right-side > * {
-  stroke: var(--color-light-1);
-  stroke-width: 3px;
-}
-.intro_right-side > polygon,
-.intro_left-side > polygon {
-  fill: var(--color-dark-1);
-  stroke: none;
+#intro.hide .intro_right-side {
+  animation: moveRight 2s forwards;
 }
 
 nav {
@@ -113,7 +128,7 @@ nav {
 }
 nav.active {
   opacity: 0.9;
-  z-index: var(--layer-middle);
+  z-index: var(--layer-higher);
 }
 nav > ul {
   padding: 0;
@@ -149,8 +164,9 @@ header > .content {
   height: 50px;
   margin: 25px;
   padding: 6px;
+  border: 2px outset buttonborder;
   background: var(--color-dark-1);
-  z-index: var(--layer-upper);
+  z-index: var(--layer-middle);
   cursor: pointer;
 }
 .toggle > * {
@@ -186,6 +202,19 @@ header > .content {
 main {
   overflow: hidden;
 }
+main a:link {
+  color: var(--color-highlight);
+}
+main a:visited {
+  color: var(--color-light-2);
+}
+main a:hover {
+  background: var(--color-highlight);
+  color: var(--color-dark-1);
+}
+main a:active {
+  color: var(--color-light-1);
+}
 
 section:nth-child(odd) {
   background: var(--color-dark-2);
@@ -205,7 +234,8 @@ section > .content {
   text-align: center;
   padding: 35px 20px;
 }
-.content_header > video {
+.content_header > img {
+  max-width: 100%;
   max-height: 50vh;
 }
 .content_header > h1 {
@@ -235,10 +265,6 @@ section > .content {
   display: flex;
   justify-content: center;
   height: 100vh;
-}
-#home img {
-  max-width: 100%;
-  max-height: 50vh;
 }
 
 #experience .content_main {
@@ -273,7 +299,7 @@ section > .content {
 .step > * {
   padding: 0 30px;
 }
-.step_icon > img {
+.step_icon {
   width: 150px;
 }
 .step_text {
@@ -311,16 +337,16 @@ section > .content {
   to { transform: translateY(-10%); }
 }
 @keyframes show {
-  0% { display: none; }
-  29.3% { display: none; z-index: var(--layer-basic); }
-  29.4% { display: block; z-index: var(--layer-top); }
-  100% { display: block; }
+  0% { z-index: var(--layer-under); }
+  29.3% { z-index: var(--layer-under); }
+  29.4% { z-index: var(--layer-base); }
+  100% { z-index: var(--layer-base); }
 }
 @keyframes hide {
-  0% { display: block; }
-  29.2% { display: block; z-index: var(--layer-top); }
-  29.3% { display: none; z-index: var(--layer-basic); }
-  100% { display: none; }
+  0% { z-index: var(--layer-base); }
+  29.3% { z-index: var(--layer-base); }
+  29.4% { z-index: var(--layer-under); }
+  100% { z-index: var(--layer-under); }
 }
 @keyframes isolate {
   from { opacity: 0; }
@@ -328,6 +354,7 @@ section > .content {
 }
 
 .card {
+  position: relative;
   width: calc(min(1vw, 1vh) * 28);
   margin: 2%;
   transition: 0.8s;
@@ -335,7 +362,7 @@ section > .content {
 }
 .card:hover {
   transform: translateY(-10%);
-  z-index: var(--layer-middle);
+  z-index: var(--layer-higher);
 }
 .card.highlight {
   animation: highlight 1s infinite alternate;
@@ -348,7 +375,7 @@ section > .content {
 }
 .card.revert {
   cursor: auto;
-  z-index: var(--layer-top);
+  z-index: var(--layer-upper);
 }
 .card.revert:before {
   content: "";
@@ -376,12 +403,12 @@ section > .content {
   font-size: 12px;
   letter-spacing: 0;
 }
-.card_back > svg {
+.card_back {
   stroke: var(--color-dark-1);
-  stroke-width: 6px;
-  stroke-linecap: square;
 }
 .card_front {
+  position: absolute;
+  top: 0;
   transform: rotateY(180deg);
 }
 .project_platform {
@@ -399,12 +426,6 @@ section > .content {
   width: 100%;
   border: none;
   border-radius: var(--card-indent) var(--card-indent) 0 0;
-}
-.project_link {
-  width: 100%;
-  height: 50%;
-  position: absolute;
-  top: 0;
 }
 .project_info,
 .project_tags {
@@ -458,9 +479,13 @@ footer > .content > * {
 .footer_logo {
   width: 30px;
   height: 30px;
-}
-.footer_logo > svg {
   stroke: var(--color-light-1);
+}
+
+.card_back,
+.footer_logo {
+  stroke-width: 6px;
+  stroke-linecap: square;
 }
 
 @media only screen and (max-width: 1024px), (max-height: 1024px) {
@@ -510,7 +535,7 @@ footer > .content > * {
   }
 }
 @media only screen and (max-height: 480px) {
-  .content_header > video {
+  .content_header > img {
     display: none;
   }
 }
